tests/fail/expr/unary.rs
fn main() {
    one_assert::assert!(*false);
    one_assert::assert!(-false);
    one_assert::assert!(*1);
    one_assert::assert!(!0);
    one_assert::assert!(-0);
}
